# Ask-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  chat-widget-new.js  chat-widget-professional-demo.html  chat-widget.html  chat-widget.js  data_split.py  end.txt  interactive-chat.html  main.py  middle.txt  moderation.py  pyproject.toml  requirements.txt  server.py  simple_processor.py  start.txt  stream_processor.py  test-frontend.html  test.html  test_enhanced_crawler.py  test_tool.py  tool.py  web_crawler_tool.py  widget-demo.html
web-crawler-ui/: README.md  example.tsx  index.ts
web-crawler-ui/components/: ReasoningSteps.tsx  SourcesDisplay.tsx  StreamingContent.tsx  WebCrawlerChat.tsx
web-crawler-ui/hooks/: useWebCrawlerStream.ts
web-crawler-ui/styles/: webCrawlerStyles.css
web-crawler-ui/types/: streaming.ts
whisper-wisdom-widget-main/: README.md  index.html
whisper-wisdom-widget-main/public/: chat-widget.html  widget-integration-example.html
whisper-wisdom-widget-main/src/pages/: Index.tsx
